# louvain-leiden

./: .gitignore  .ruff.toml  CITATION.cff  Demo (Karate Club).ipynb  NetworkX Comparison.ipynb  Parameter Exploration.ipynb  Performance Comparison.ipynb  Profiling.ipynb  README.md  Runtime Comparisons.ipynb  leiden.py  louvain.py  pyproject.toml  quality_metrics.py  requirements.txt  shell.nix  utils.py
community_detection/: __init__.py  leiden.py  louvain.py  quality_functions.py  quality_metrics.py  utils.py
datasets/: __init__.py  cora.py  jazz.py  relativity.py
datasets/jazz/: edges.csv
datasets/jazz_data/: README.arenas-jazz  jazz-positions.csv
tests/: test_compare_implementations.py  test_cora.py  test_helpers.py  test_heuristics.py  test_karate_club.py  test_quality_metrics.py  test_simple_graphs.py  test_utils.py  utils.py
