[project]
name = "community_detection"
version = "20230823!0.1.0"
description = "An implementation of the Louvain and Leiden community detection algorithms for NetworkX."

license = {text = "European Union Public License 1.2"}
requires-python = ">=3.9"
authors = [ {name = "Daniel Albert", email = "git+community-detection+252b9@esclear.de"} ]

[tool.black]
line-length = 120
target-version = ["py39", "py310"]
skip-string-normalization = true


[tool.coverage.run]
omit = [
    # Omit tests
    "tests/*",
    # Omit system-wide libraries
    "/nix/*",
    "/usr/*",
    "/lib/*"
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]


[tool.ruff]
line-length = 120
select = [ "E", "F", "D", "UP" ]

extend-exclude = ["tests"]

[tool.ruff.pydocstyle]
convention = "pep257"


[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
